--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
             </div>
             <div id="guest">
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <div class="score-board">
                     <p class="scores">0</p>
                 </div>
